Added contact.html Fixed mobile compatibility issues,

--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,19 @@
     <title>Bio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="box">
         <h1>Andrew Ross</h1>
-        <div id="bio-content" style="text-align: center;"></div>  
-        <button id="bio-btn" onclick="goToIndex()" class="btn">Back</button>
+        <div id="contact-content" style="text-align: auto;"></div>  
+        <button style="text-align: center;"id="con-btn" onclick="goToIndex()" class="btn">Back</button>
     </div>
     <script src="content.js"></script>
     <script>
-        console.log('Loaded bio.html');
+        console.log('Loaded contact-content.html');
         window.onload = function() {
-            loadBioContent();
+            loadContactContent();
         };
     </script>
 
