Added bio and contact folders.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <div class="container">
         <h1>Andrew Ross</h1>
         <div style="text-align: center;">
-            <a href="bio.html" id="bio-btn" class="btn">Bio</a>
-            <a href="blog.html" class="btn">Blog</a>
-            <a href="contact.html" id="con-btn" class="btn">Contact</a>
-            <a href="portfolio.html" class="btn">Portfolio</a>
+            <a href="/bio" id="bio-btn" class="btn">Bio</a>
+            <a href="/blog" class="btn">Blog</a>
+            <a href="/contact" id="con-btn" class="btn">Contact</a>
+            <a href="/portfolio" class="btn">Portfolio</a>
         </div>
     </div>
     <script src="content.js"></script>
