Added Blog page, added background styling.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">  
 </head>
-<body class="index-body" style="background-color: black;">
+<body class="index-body light-mode" style="background-color: black;">
+    
     <div class="container">
-        <h1>Andrew Ross</h1>
+        <h1 style="color: white;">Andrew Ross</h1>
         <div style="text-align: center;">
             <a href="/bio" id="bio-btn" class="btn">Bio</a>
-            <a href="/blog" class="btn">Blog</a>
+            <a href="/blog" id="blog-btn" class="btn">Blog</a>
             <a href="/contact" id="con-btn" class="btn">Contact</a>
             <a href="/portfolio" class="btn">Portfolio</a>
         </div>
+        <!button style="margin-top: 1vh;margin-left: 1px;max-width: 25%;"id="toggle-mode-btn" class="btn"><!Toggle mode</button> 
     </div>
     <script src="content.js"></script>
     <script>
