--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@
     <div class="box">
         <h1>Andrew Ross</h1>
         <div id="contact-content" style="text-align: auto;"></div>  
-        <button style="text-align: center;"id="con-btn" onclick="goToIndex()" class="btn">Back</button>
+        <button style="text-align: center;max-width: 29%;"id="con-btn" onclick="goToIndex()" class="btn">Back</button>
     </div>
     <script src="../content.js"></script>
     <script>
