--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <button style="max-width: 50%;"onclick="goToPortfolio()" class="btn btn-light">Portfolio</button>  
             <!button style="margin-top: 1vh;margin-left: 1px;max-width: 25%;"id="toggle-mode-btn" class="btn"><!Toggle mode</button> 
         </div>
-        <script src="content.js"></script>
+        <script src="/content.js"></script>
         <script>
             console.log('Loaded index.html');
         </script>
