Minor position adjustments

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Andrew Ross</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/style.css"> 
+    <link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
   <body>
     <bootstrap>
-        <div class="container">
-                <h1>Andrew Ross</h1>
+        <div class="container" >
+                <h1 class="fs-1" style="text-align: center;">Andrew Ross</h1>
 
                 <button style="max-width: 50%;"onclick="goToBio()" class="btn btn-light">Bio</button>
                 <button style="max-width: 50%;"onclick="goToBlog()" class="btn btn-light">Blog</button>
@@ -19,7 +19,7 @@
                 <button style="max-width: 50%;"onclick="goToPortfolio()" class="btn btn-light">Portfolio</button>  
             <!button style="margin-top: 1vh;margin-left: 1px;max-width: 25%;"id="toggle-mode-btn" class="btn"><!Toggle mode</button> 
         </div>
-        <script src="/content.js"></script>
+        <script src="content.js"></script>
         <script>
             console.log('Loaded index.html');
         </script>
