--- a/contact/index.html
+++ b/contact/index.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <div class="container" style="text-align: center;">
-      <h1>Andrew Ross</h1>
-      <button style="max-width: 50%;" onclick="goToEmail()" class="btn btn-light">Email</button>
-      <button style="max-width: 50%;" onclick="goToLinkedIn()" class="btn btn-light">LinkedIn</button>
-      <button style="max-width: 50%;" onclick="goToGitHub()" class="btn btn-light">Github</button>
-      <button style="max-width: 50%;" onclick="goToDevpost()" class="btn btn-light">Devpost</button>  
-      <button style="max-width: 50%;" onclick="goToIndex()" class="btn btn-light">Back</button>
+      <h1 class="fs-1">Andrew Ross</h1> 
+      <div class="wrapper" style="margin-top: 18vh; padding: 0vh;">
+        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToEmail()" class="btn btn-light">Email</button>
+        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToLinkedIn()" class="btn btn-light">LinkedIn</button>
+        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToGitHub()" class="btn btn-light">Github</button>
+        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToDevpost()" class="btn btn-light">Devpost</button>  
+        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToIndex()" class="btn btn-light">Back</button>
+      </div>
     </div>
     <script src="../content.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
