--- a/index.html
+++ b/index.html
@@ -4,26 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Andrew Ross</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css"> 
-</head>
+  </head>
   <body>
-    <bootstrap>
-        <div class="container" >
-                <h1 class="fs-1" style="text-align: center;">Andrew Ross</h1>
-
-                <button style="max-width: 50%;"onclick="goToBio()" class="btn btn-light">Bio</button>
-                <button style="max-width: 50%;"onclick="goToBlog()" class="btn btn-light">Blog</button>
-                <button style="max-width: 50%;"onclick="goToContact()" class="btn btn-light">Contact</button>
-                <button style="max-width: 50%;"onclick="goToPortfolio()" class="btn btn-light">Portfolio</button>  
-            <!button style="margin-top: 1vh;margin-left: 1px;max-width: 25%;"id="toggle-mode-btn" class="btn"><!Toggle mode</button> 
+    <body>
+      <div class="pack">
+      <div class="container" style="text-align: center;">
+        <h1>Andrew Ross</h1>
+        <div class="wrapper" style="margin-top: 16vh; padding: 0vh;">
+          <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToBio()" class="btn">Bio</button>
+          <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToBlog()" class="btn">Blog</button>
+          <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToContact()" class="btn">Contact</button>
+          <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToPortfolio()" class="btn">Portfolio</button>  
         </div>
-        <script src="content.js"></script>
-        <script>
-            console.log('Loaded index.html');
-        </script>
-    </bootstrap>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  </body>
+      </div>
+    </div>  
+    <script src="content.js"></script>
+    <script>
+      console.log('Loaded index.html');
+    </script>
+   </body>
 </html>
