--- a/contact/index.html
+++ b/contact/index.html
@@ -5,21 +5,18 @@
     <title>Contact</title>
     <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>
     <div class="container" style="text-align: center;">
-      <h1 class="fs-1">Andrew Ross</h1> 
-      <div class="wrapper" style="margin-top: 18vh; padding: 0vh;">
-        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToEmail()" class="btn btn-light">Email</button>
-        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToLinkedIn()" class="btn btn-light">LinkedIn</button>
-        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToGitHub()" class="btn btn-light">Github</button>
-        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToDevpost()" class="btn btn-light">Devpost</button>  
-        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToIndex()" class="btn btn-light">Back</button>
+      <h1>Andrew Ross</h1>
+      <div class="wrapper" style="margin-top: 16vh; padding: 0vh;">
+        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToEmail()" class="btn">Email</button>
+        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToLinkedIn()" class="btn">LinkedIn</button>
+        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToGitHub()" class="btn">Github</button>
+        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToDevpost()" class="btn">Devpost</button>  
+        <button style="max-width: 50%; margin-bottom: 1vh;line-height: 0em;" onclick="goToIndex()" class="btn">Back</button>
       </div>
     </div>
     <script src="../content.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
-  
 </html>
